# turtlebot3_swarm

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: mpc_test.launch.py
src/turtlebot3_controller/: CMakeLists.txt  package.xml
src/turtlebot3_controller/src/: control_node.py  mpc_controller.py
src/turtlebot3_gazebo/: CMakeLists.txt  package.xml
src/turtlebot3_gazebo/launch/: mpc_test.launch.py  spawn_turtlebot3.launch.py
src/turtlebot3_gazebo/rviz/: config.rviz
src/turtlebot3_gazebo/urdf/: turtlebot3_waffle.urdf.xacro
turtlebot3_swarm/: control_node.py  global_reference.py  mpc_controller.py  utils.py
